TestCases/LLVMTests/SyntaxErrorTests/tests/test29.c
enum Color {
    RED,
    GREEN,
    BLUE
}
// Missing semicolon here
int main(){
    return 0;
}